# Announcer-Bot

./: .dockerignore  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md  cli.sh  debug_test_run.sh  package.json  rustfmt.toml
.github/workflows/: check-youtube-dl-version.yml  docker-image-ci.yml
.release-versions/: youtube-dl-latest.txt
root/usr/: run.sh
root/usr/src/: run.sh
root/usr/src/app/: bot.js  package.json
src/: bot.js  main.rs  run  run.sh
src/commands/: list.rs  manage.rs  mod.rs  names.rs  new.rs  newfile.rs  random.rs  set.rs
src/lib/: check.rs  component_ids.rs  consts.rs  mod.rs  parse.rs  util.rs
src/util/: check.rs  component_ids.rs  consts.rs  messages.rs  mod.rs  util.rs
usr/: auth.json  bot.js  package.json
usr/src/app/: auth.json  package.json
