[package]
name = "announcer_bot"
version = "0.4.2"
authors = ["sasjafor <sascha.forster@hotmail.ch>"]
edition = "2021"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1

[dependencies]
env_logger = "0.11.8"
lazy_static = "1.5.0"
libsodium-sys = "0.2.7"
log = "0.4.27"
poise = "0.6.1"
rand = "0.9.1"
regex = "1.11.1"
reqwest = "0.12.15"
rusqlite = "0.35.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
tracing-futures = "0.2.5" # needed so instrument works with async functions.
url = "2.5.4"

[dependencies.songbird]
version = "0.5.0"

[dependencies.symphonia]
version = "0.5.4"
features = [ "aac", "mp3", "alac", "flac" ]

[dependencies.tokio]
version = "1.44.2"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "cache",
    "voice",
    "rustls_backend",
]
version = "0.12.4"
