[package]
name = "announcer_bot"
version = "0.5.0"
authors = ["sasjafor <sascha.forster@hotmail.ch>"]
edition = "2021"

[profile.release]
lto = true
panic = "abort"
opt-level = 3
codegen-units = 1

[dependencies]
env_logger = "0.11.10"
lazy_static = "1.5.0"
libsodium-sys = "0.2.7"
log = "0.4.29"
poise = "0.6.1"
rand = "0.10.0"
regex = "1.12.3"
reqwest = "0.13.2"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tracing-futures = "0.2.5" # needed so instrument works with async functions.
url = "2.5.8"

[dependencies.rustls]
version = "0.23.37"
default-features = false
features = ["aws-lc-rs"]

[dependencies.rusqlite]
version = "0.39.0"
features = ["bundled"]

[dependencies.songbird]
version = "0.6.0"

[dependencies.symphonia]
version = "0.5.5"
features = [ "aac", "mp3", "alac", "flac" ]

[dependencies.tokio]
version = "1.51.0"
features = ["macros", "signal", "rt-multi-thread"]

[dependencies.serenity]
default-features = false
features = [
    "builder",
    "client",
    "gateway",
    "http",
    "model",
    "utils",
    "cache",
    "voice",
    "rustls_backend",
]
version = "0.12.5"

# [patch.crates-io]
# rustls = { version = "0.23.37", default-features = false, features = ["ring"] }
